2-kubernetes-monitoring/web/overlays/pre/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: demo-webapp
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "200m"
            memory: "200Mi"
