2-kubernetes-monitoring/web/overlays/pre/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ingress
spec:
  rules:
  - host: pre.demo-webapp.local
